# iroh-lan

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_creator  Dockerfile_participant  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml
_tauri/: tsconfig.json  tsconfig.node.json
docker-test/: entrypoint_stress.sh
docker_test/: Dockerfile  compose-stress.yaml  compose.yaml  entrypoint.sh  entrypoint_stress.sh
examples/: creator.rs  game_check.rs  participant.rs  tcp_client.rs  tcp_server.rs  tun_test.rs
legacy_test/: Dockerfile
src/: actor.rs  actor_impr.rs  auth.rs  cli.rs  connection.rs  direct_connect.rs  direct_connect_actor_lite.rs  lib.rs  local_networking.rs  local_networking_actor_lite.rs  network.rs  router copy.rs  router.rs  standalone.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/ui/: button.tsx
ui/src/lib/: bindings-types.ts  bindings.ts
