[package]
name = "iroh-lan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
distributed-topic-tracker = "0.1.5"
iroh = "0.91.2"
iroh-gossip = "0.91.0"
iroh-docs = "0.91.0"
iroh-blobs = "0.93.0"
runas = "1.2.0"
tokio = "1.47.1"
nix = { version = "0.30.1", features = ["process"] }
self-runas = "0.1.0"
rand = "0.8"
pnet_packet = "0.35.0"
tun-rs = { version = "2.7.2", features = ["async"] }
serde = "1.0.219"
futures = "0.3.31"
postcard = { version = "1.1.3", features = ["use-std"] }
sha2 = "0.10.9"
z32 = "1.3.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[lib]
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[[example]]
name = "participant"
path = "examples/participant.rs"
crate-type = ["bin"]

[[example]]
name = "creator"
path = "examples/creator.rs"
crate-type = ["bin"]
