[package]
name = "iroh-lan"
description = "iroh-lan = hamachi - account - install"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/iroh-lan"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1"
distributed-topic-tracker = "0.2"
ed25519-dalek = "3.0.0-pre.1"
iroh = "0.93"
iroh-gossip = "0.93"
iroh-docs = "0.93"
iroh-blobs = "0.95"
runas = "1"
tokio = "1"
nix = { version = "0.30", features = ["process"] }
self-runas = "0.1"
rand = "0.9"
pnet_packet = "0.35"
tun-rs = { version = "2", features = ["async"] }
serde = "1"
futures = "0.3"
postcard = { version = "1", features = ["use-std"] }
sha2 = "0.10"
z32 = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

actor-helper = "0.2"


[lib]
path = "src/lib.rs"
crate-type = ["lib"]
bench = false

[[example]]
name = "participant"
path = "examples/participant.rs"
crate-type = ["bin"]

[[example]]
name = "creator"
path = "examples/creator.rs"
crate-type = ["bin"]
