[package]
name = "iroh-lan-ui"
version = "0.1.0"
description = "iroh-lan"
authors = ["Zacharias Böhler (rustonbsd@mailfence.com)"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_lan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

iroh-lan = { path = "../../../iroh-lan" }
once_cell = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
iroh = "0.91.2"
self-runas = "0.1.0"
anyhow = "1"


tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
